# PFAS-FLUX

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.md  README.md  config_pfas_flux.json  pyproject.toml  run_pfas_flux.py
data/: README.md
data/synthetic_case_archive/: README.md  analyte_groups.csv  archive_manifest.csv  assumed_K_zones.csv  control_plane_cells.csv  data_dictionary.csv  example_mass_discharge_results.csv  receptor_flows.csv  source_areas.csv  surface_water_nodes.csv  wells.csv
docs/: file_dictionary.csv  file_dictionary.md  hydrogeology_journal_technical_note_notes.md  monte_carlo_design.md  reference_audit.csv  release_checklist.md  zenodo_release_instructions.md
figures/: Figure1_PFAS_FLUX_workflow.tif  Figure2_synthetic_benchmark.tif  Figure3_results_and_data_priority.tif
notebooks/: PFAS_FLUX_workflow.ipynb
outputs/logs/: run_metadata.json
outputs/tables/: archive_basis_audit.csv  control_plane_analyte_summary.csv  control_plane_cell_results.csv  control_plane_group_summary.csv  receptor_allowable_loads.csv  receptor_comparison_fcomp_adjusted.csv  receptor_comparison_measured.csv  sensitivity_rank_summary.csv  surface_water_analyte_loads.csv  surface_water_group_loads.csv  uncertainty_control_plane_analyte_summary.csv  uncertainty_control_plane_group_summary.csv  uncertainty_driver_proxy.csv  uncertainty_receptor_summary.csv  (+2 more)
pfas_flux/: __init__.py  calculations.py  io.py  plots.py  schema.py  uncertainty.py
scripts/: compute_sensitivity_summary.py  run_example_bash.sh  run_example_windows.ps1
tests/: test_units.py
